Add obfuscated vulnerable examples for evasion testing